--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,5 @@
 {
-  "i18n-ally.localesPaths": ["locales"],
+  "i18n-ally.localesPaths": ["app/locales"],
   "i18n-ally.keystyle": "nested",
   "i18n-ally.sourceLanguage": "en-US"
 }
