--- a/package.json
+++ b/package.json
@@ -13,8 +13,7 @@
     "postinstall": "nuxt prepare",
     "typecheck": "nuxi typecheck",
     "lint": "eslint .",
-    "lint:fix": "eslint . --fix",
-    "user:utils": "node extra/user.js"
+    "lint:fix": "eslint . --fix"
   },
   "dependencies": {
     "@iconify-json/flag": "^1.2.0",
@@ -23,16 +22,15 @@
     "@nuxt/image": "^1.8.0",
     "@nuxt/ui": "^2.18.5",
     "@nuxtjs/i18n": "^8.5.5",
-    "@nuxtjs/seo": "2.0.0-rc.21",
     "@vueuse/nuxt": "^11.1.0",
-    "consola": "^3.2.3",
-    "dotenv": "^16.4.5",
+    "better-sqlite3": "^11.3.0",
+    "destr": "^2.0.3",
+    "drizzle-orm": "^0.33.0",
     "ldap-passwords": "^3.0.3",
-    "mongoose": "^8.6.3",
     "nuxt": "^3.13.2",
     "nuxt-auth-utils": "^0.3.9",
     "pm2": "^5.4.2",
-    "vue": "^3.5.7",
+    "vue": "^3.5.8",
     "vue-router": "^4.4.5",
     "zod": "^3.23.8"
   },
