--- a/package.json
+++ b/package.json
@@ -43,6 +43,7 @@
     "nuxt-auth-utils": "^0.3.9",
     "pm2": "^5.4.2",
     "vue": "^3.5.8",
+    "vue-data-ui": "^2.2.95",
     "vue-router": "^4.4.5",
     "zod": "^3.23.8"
   },
